--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,10 @@ body {
     width: 80px;
     height: 80px;
     margin: 10px;
-    background-color: darkgoldenrod;
+    background-color: rgb(158, 186, 240);
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 26px;
+    font-size: 20px;
 
 }
